fix(atomic): prevent result template  text elements from overflowing
https://coveord.atlassian.net/browse/KIT-649

--- a/packages/atomic/src/components/result-template-components/atomic-result-printable-uri/atomic-result-printable-uri.pcss
+++ b/packages/atomic/src/components/result-template-components/atomic-result-printable-uri/atomic-result-printable-uri.pcss
@@ -22,10 +22,6 @@ atomic-result-printable-uri li:last-child::after {
   content: none;
 }
 
-atomic-result-printable-uri atomic-result-text {
-  overflow-wrap: anywhere;
-}
-
 .result-printable-uri-separator {
   display: inline-block;
   margin: 0 0.5rem;
